--- a/portfolio.css
+++ b/portfolio.css
@@ -27,4 +27,13 @@ p {
     visibility: hidden;
     width: 240px;
     margin: 10px auto 0;
+    opacity: 0;
+    transition: 0.6s;
+    transform: translateX(-200px);
+}
+
+.show-antwoord {
+    visibility: visible;
+    opacity: 1;
+    transform: translateX(0);
 }
