--- a/portfolio.css
+++ b/portfolio.css
@@ -94,6 +94,7 @@ li {
 
 
 
+
 .contner {
     max-width: 800px;
     margin: 50px auto;
@@ -139,6 +140,15 @@ li {
     margin: 50px auto;
     padding: 20px;
     text-align: center;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.sek {
+    max-width: 800px;
+    margin: 50px auto;
+    padding: 20px;
     background-color: #fff;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
